--- a/src/app/education/education.module.css
+++ b/src/app/education/education.module.css
@@ -12,31 +12,10 @@
     gap: 30px;
 }
 
-.education_header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 20px;
-    padding: 0 30px;
-}
-
-.education_header h2{
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.education_header hr{
-    top: 10px;
-    bottom: 0;
-    width: 10%;
-    height: 0.5px;
-}
 
 .education_description{
     flex: 1;
     display: flex;
-    /* justify-content: space-around; */
-    /* background-color: yellow; */
     gap: 30px;
 
     padding: 0 30px;
@@ -49,6 +28,12 @@
     gap: 5px;   
     background-color: var(--bgSoft);
     min-height: auto;
+}
+
+.image{
+    background : white;
+    width:100% ;
+    height : 40%;
 }
 
 .education_college:hover {
@@ -75,4 +60,77 @@
 .education_collge_Info p{
     font-size: 14px;
     font-style: italic;
+}
+
+
+@media screen and (max-width: 767px){
+   
+    .education{
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        padding: 5px 20px;
+        gap: 20px;
+
+    }
+
+    .education_description{
+
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        padding: 0 20px;
+    }
+
+    .education_college {
+
+        width: 100%;  
+    }
+
+    .image{
+        
+        height : 50%;
+    }
+    
+    .education_collge_Info h5,
+    .education_collge_Info h4{
+        font-size: 14px;
+    }
+    
+    .education_collge_Info p{
+        font-size: 12px;
+
+    }
+    
+}
+
+/* Tablet devices */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+    .education_description{
+
+        flex-direction: column;
+        gap: 60px;
+    }
+
+    .education_college{
+        width: 100%;
+    }
+
+    
+.education_collge_Info{
+    line-height: 3rem;
+    padding: 30px;
+
+}
+
+.education_collge_Info h5,
+.education_collge_Info h4{
+    font-size: 24px;
+}
+
+
+.education_collge_Info p{
+    font-size: 22px;
+}
 }
