--- a/src/app/project/project.module.css
+++ b/src/app/project/project.module.css
@@ -12,26 +12,6 @@
     gap: 10px;
 }
 
-.project_header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 20px;
-    padding: 0 30px;
-}
-
-.project_header h2{
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.project_header hr{
-    top: 10px;
-    bottom: 0;
-    width: 10%;
-    height: 0.5px;
-}
-
 .project_box{
     /* background-color: yellow; */
     margin: 0 30px;
@@ -72,7 +52,7 @@
     flex-wrap: wrap;
     /* justify-content: space-around; */
     padding: 10px 0 10px 10px;
-    padding-left: 10px;
+
     gap: 20px;
     /* background-color: yellow; */
     width: 100%;
@@ -100,16 +80,6 @@
 }
 
 
-/* .project_box_item_box h4{
-
-    font-size: 1.5rem;
-    font-family: "Raleway", sans-serif;
-    margin-bottom: .5rem;
-    font-weight: 500;
-    line-height: 1.2;
-    text-align: center;
-} */
-
 .project_box_item_boxImg{
     position: relative;
 }
@@ -120,19 +90,6 @@
     height: 160px;
 }
 
-/* .project_box_item_modal1{
-    background-color: rgba(0, 0, 0, 0.04);
-    width: 360px;
-    height: 160px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 80px;
-
-  outline: 3px ridge white;
-  outline-offset: -10px; 
-  outline-style: inset;
-} */
 
 .project_box_item_modal1 {
     position: absolute; 
@@ -171,4 +128,93 @@
     height: 30%; /* Adjust the length of the vertical line */
     border-left: none;
     border-top: none;
+}
+
+/* Mobile devices */
+
+@media screen and (max-width: 767px){
+
+
+    .project{
+       
+        padding: 0px 5px;
+    }
+
+    .project_box{
+        
+        margin: 0;
+        padding: 0;
+        gap: 20px;
+    }
+
+    .project_boxTop{
+        /* background-color: purple; */
+        padding: 5px 1px;
+    
+        gap: 2px;
+    }
+
+    .project_boxTop button{
+        padding: 8px 10px;
+        margin: 5px 3px;
+        line-height: 1.3;
+    }
+
+    .project_boxBottom{
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        margin-bottom: 20px;
+    }
+
+    
+.project_box_item{
+
+    width: 100%;
+    height: 200px;
+    padding-right: 10px;
+
+}
+
+.img ,
+.project_box_item_modal1{
+    width: 320px;
+}
+
+}
+
+/* Tablet devices */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .container{
+        padding: 0;
+    }
+
+    .project{
+        padding: 20px 5px;
+        gap: 20px;
+    }
+
+    .project_box{
+        gap: 20px;
+        margin: 0 10px;
+    }
+
+
+
+    .project_boxBottom{
+
+        padding: 10px;
+    }
+
+    .project_box_item,
+    .project_box_item_boxImg{
+
+        width: 338px;
+    }
+
+    .img,
+    .project_box_item_modal1{
+        width: 100%;
+
+    }
 }
