--- a/src/components/navbar/links/link.module.css
+++ b/src/components/navbar/links/link.module.css
@@ -5,3 +5,33 @@
     font-size: 19px;
     font-weight: 400;
 }
+
+.menu{
+    display: none;
+}
+
+@media screen and (max-width: 767px){
+    .links{
+        display: none;
+    }
+
+    .menu{
+        display: block;
+        position: fixed;
+        margin: 10px;
+        top: 10px;
+        right: 10px;
+        width: 40px;
+        height: 40px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .links{
+        display: flex;
+        align-items: center;
+        gap: 25px;
+        font-size: 17px;
+        font-weight: 400;
+    }
+}
