--- a/src/components/projectModal/projectModal.module.css
+++ b/src/components/projectModal/projectModal.module.css
@@ -60,3 +60,41 @@
     font-weight: 400;
     line-height: 2;
 }
+
+/* Mobile Device */
+@media screen and (max-width: 767px){
+
+    .detailbox{
+        margin: 25% 5%;
+        padding: 5%;
+        overflow-y: scroll;      
+    }
+
+    
+.detailbox h2{
+    font-size: 1.5rem;
+    
+}
+
+.detailbox ul,
+.detailbox p{
+
+    font-size: 1rem;
+    padding-left: 30px;
+    text-align: justify;
+}
+
+
+.detailbox ul{
+    padding-left: 30px;
+}
+}
+
+/* Tablet devices */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .detailbox{
+    margin: 15% 10%;
+    padding: 5%;
+    overflow-y: scroll;
+    }
+}
