--- a/src/app/skill/skill.module.css
+++ b/src/app/skill/skill.module.css
@@ -18,6 +18,8 @@
     padding: 0 20px;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     gap: 20px;
 }
 
@@ -25,8 +27,7 @@
     width: 150px;
     height: 150px;
     background-color: var(--bgSoft);
-    margin-left: 20px;
-    margin-top: 10px;
+    margin: 10px;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -34,12 +35,16 @@
     gap: 15px;
     padding: 20px;
     border: 1px solid rgb(193, 192, 192);
+    
 }
+
 
 .item:hover{
     background-color: var(--boxHover);
-
+    transform: scale(110%) ;
+    transition: all 0.1s 0.1s;
 }
+
 
 .img{
     width: 60%;
