--- a/src/app/education/education.module.css
+++ b/src/app/education/education.module.css
@@ -17,7 +17,6 @@
     flex: 1;
     display: flex;
     gap: 30px;
-
     padding: 0 30px;
 }
 
@@ -27,7 +26,17 @@
     width: 31%;
     gap: 5px;   
     background-color: var(--bgSoft);
-    min-height: auto;
+    min-height: auto;  
+}
+
+.education_college:first-child {
+    -webkit-animation: roll-in-blurred-right 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+    animation: roll-in-blurred-right 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+}
+
+.education_college:last-child {
+    -webkit-animation: roll-in-blurred-right 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1s both;
+    animation: roll-in-blurred-right 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1s both;
 }
 
 .image{
@@ -36,10 +45,9 @@
     height : 40%;
 }
 
+
 .education_college:hover {
-
     background-color: var(--boxHover);
-
 }
 
 .education_collge_Info{
@@ -62,6 +70,45 @@
     font-style: italic;
 }
 
+
+/* Keyframes */
+
+ @-webkit-keyframes roll-in-blurred-right {
+    0% {
+      -webkit-transform: translateX(1000px) rotate(720deg);
+              transform: translateX(1000px) rotate(720deg);
+      -webkit-filter: blur(50px);
+              filter: blur(50px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0) rotate(0deg);
+              transform: translateX(0) rotate(0deg);
+      -webkit-filter: blur(0);
+              filter: blur(0);
+      opacity: 1;
+    }
+  }
+  @keyframes roll-in-blurred-right {
+    0% {
+      -webkit-transform: translateX(1000px) rotate(720deg);
+              transform: translateX(1000px) rotate(720deg);
+      -webkit-filter: blur(50px);
+              filter: blur(50px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0) rotate(0deg);
+              transform: translateX(0) rotate(0deg);
+      -webkit-filter: blur(0);
+              filter: blur(0);
+      opacity: 1;
+    }
+  }
+  
+
+
+/* -------------- */
 
 @media screen and (max-width: 767px){
    
