--- a/src/app/project/project.module.css
+++ b/src/app/project/project.module.css
@@ -86,7 +86,8 @@
 
 .img{
     background-color: #fff;
-    width: 360px;
+    /* width: 360px; */
+    width: 100%;
     height: 160px;
 }
 
@@ -97,7 +98,8 @@
     background-color: rgba(0, 0, 0, 0.5);
     /* background-color: #e83434f3; */
     /* opacity: 1; */
-    width: 360px;
+    /* width: 360px; */
+    width: 100%;
     height: 160px;
     display: flex;
     align-items: center;
@@ -129,6 +131,7 @@
     border-left: none;
     border-top: none;
 }
+
 
 /* Mobile devices */
 
