--- a/src/app/education/education.module.css
+++ b/src/app/education/education.module.css
@@ -16,28 +16,21 @@
 .education_description{
     flex: 1;
     display: flex;
-    gap: 30px;
+    justify-content: space-between;
+    /* gap: 50px; */
     padding: 0 30px;
 }
+
 
 .education_college {
     display: flex;
     flex-direction: column;
-    width: 31%;
+    width: 48%;
     gap: 5px;   
     background-color: var(--bgSoft);
     min-height: auto;  
 }
 
-.education_college:first-child {
-    -webkit-animation: roll-in-blurred-right 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
-    animation: roll-in-blurred-right 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
-}
-
-.education_college:last-child {
-    -webkit-animation: roll-in-blurred-right 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1s both;
-    animation: roll-in-blurred-right 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1s both;
-}
 
 .image{
     background : white;
@@ -48,6 +41,8 @@
 
 .education_college:hover {
     background-color: var(--boxHover);
+    transform: scale(1.05);
+    transition: all 0.1s 0.1s;
 }
 
 .education_collge_Info{
@@ -69,43 +64,6 @@
     font-size: 14px;
     font-style: italic;
 }
-
-
-/* Keyframes */
-
- @-webkit-keyframes roll-in-blurred-right {
-    0% {
-      -webkit-transform: translateX(1000px) rotate(720deg);
-              transform: translateX(1000px) rotate(720deg);
-      -webkit-filter: blur(50px);
-              filter: blur(50px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0) rotate(0deg);
-              transform: translateX(0) rotate(0deg);
-      -webkit-filter: blur(0);
-              filter: blur(0);
-      opacity: 1;
-    }
-  }
-  @keyframes roll-in-blurred-right {
-    0% {
-      -webkit-transform: translateX(1000px) rotate(720deg);
-              transform: translateX(1000px) rotate(720deg);
-      -webkit-filter: blur(50px);
-              filter: blur(50px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0) rotate(0deg);
-              transform: translateX(0) rotate(0deg);
-      -webkit-filter: blur(0);
-              filter: blur(0);
-      opacity: 1;
-    }
-  }
-  
 
 
 /* -------------- */
