--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-top: 10px;
     gap: 20px;
     padding: 0 30px;
 }
