--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,8 +6,9 @@
     /* align-items: center; */
     /* justify-content: center; */
     gap: 30px;
-    margin-left: 15%;
-    margin-top: 12%;
+    /* margin-left: 15%;
+    margin-top: 12%; */
+    margin: 12% 15%;
     overflow-y: auto;
     transition: all 0s ease-in-out 0s
 }
@@ -30,7 +31,7 @@
 
 }
 
-.container p{
+.text span{
     font-size: 24px;
     font-weight: 400;
 }
@@ -51,24 +52,40 @@
     border-radius: 50%;
 }
 
+.icon a{
+    text-decoration: none;
+}
+
+.icon:hover{
+    background-color: var(--linkText);
+}
+
+.icon a:hover{
+    color: #fff;
+}
+
 .button{
     margin-bottom: 10px;
-    margin-left: 5px;
+    margin-left: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.1);
     width: 150px;
     border-radius: 30px;
-    outline: 1px solid gray;
+    outline: 2px solid rgb(34, 255, 63);
     outline-offset: 3px;
     cursor: pointer;
     padding: 10px;
     gap: 10px;
 }
 
-.button a{
+.button:hover{
+    transform: scale(1.04);
+    transition: all 0.1s 0.1s;
+}
 
+.button a{
     background-color: transparent;
     color: var(--text);
     text-align: center;
